# post-ocr-parsing

./: .gitignore  README.md  detect.py  make_csv.py  serialize.py  visualization.ipynb
ai_model/: data.py  dataset.py  main.py  model.py  ner_utils.py  utils.py
ai_model/train/: main.py  model.py  utils.py
app/: .gitignore  grouping.py  main.py  pyproject.toml  serialization.py  test.py
app/model/ruleBase/: metric.py  ocr_metric.py  rule_base.py
app/model/ruleBase/pickle/: first_name_list.pickle  position_list.pickle
app/static/: index.js  style.css
app/template/: main.html  upload_image.html
data/: create_info.py  excel_to_txt.py  file_name.py  metric.py  namecards.py  ruel_based_model.py  rule_based_model_05282222ver0_0.py  rule_based_model_practice.py  tmp.ipynb  utils.py  view_pickle.py
data/pickle/: company_list.pickle  first_name_list.pickle  last_name_list.pickle  last_name_list_en.pickle  position_list.pickle  tmp.ipynb  한국 성씨.xlsx
fastapi/: log.txt  test.py
fastapi/template/: login_form.html
